--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@ body{
     margin: 0;
 }
 h1{
-    font-size: 60px;
+    font-size: 50px;
 }
 .orange-text{
     color: orange;
 }
 section{
     display: flex;
-
+    margin-bottom: 100px;
 }
 .top-banner{
     background-image: url(../images/top-banner.png);
@@ -22,15 +22,23 @@ section{
 }
 .half-width p{
     color: gray;
+    padding-right: 20%;
 }
 .half-width img{
     width: 90%;
 }
-.hire-btn{
+.link-btn{
     text-decoration: none;
     color: white;
     font-weight: 700;
     background-image: linear-gradient(90deg, orange , tomato);
     padding: 10px 40px;
     border-radius: 6px;
+    margin-top: 10px;
+    display: inline-block;
+}
+.dream-big{
+    background-image: url(../images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
